--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>HangmanBot</artifactId>
     <version>0.1</version>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -16,6 +21,7 @@
     </repositories>
 
     <dependencies>
+
         <dependency>
             <groupId>com.github.AgeOfWar</groupId>
             <artifactId>Telejam</artifactId>
