--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,23 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.4.3</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.AgeOfWar</groupId>
             <artifactId>Telejam</artifactId>
             <version>v7.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
